[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Orbitron/Orbitron-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MenuScript.gd" type="Script" id=2]
[ext_resource path="res://Assets/Menu_assets/main_menu_background.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu_assets/quit_button.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menu_assets/new_game_button.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 495.633, 792.106, 808.0 ]
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.5
anchor_bottom = 1.5
margin_right = 671.0
margin_bottom = 360.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Control"]
margin_left = 495.633
margin_top = 125.419
margin_right = 807.633
margin_bottom = 191.419
custom_fonts/font = SubResource( 1 )
action_mode = 0
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Control"]
margin_left = 496.0
margin_top = 218.0
margin_right = 808.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 2 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Control/PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="Control/PlayButton" to="." method="_on_PlayButton_mouse_exited"]
[connection signal="pressed" from="Control/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="Control/QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="mouse_exited" from="Control/QuitButton" to="." method="_on_QuitButton_mouse_exited"]
[connection signal="pressed" from="Control/QuitButton" to="." method="_on_QuitButton_pressed"]
